# customer-churn-prediction

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb
